--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.48",
     "@types/react": "^16.14.25",
-    "@types/react-dom": "^16.9.14",
     "framer-motion": "^4.1.17",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.9",
     "typescript": "^4.6.3",
     "web-vitals": "^0.2.4"
   },
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.1"
   }
 }
